--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,29 +16,27 @@
   {% endfor %}
   
 </head>
-<body>
- 
-  <div id="left">
-    {{ content }}
-  </div>
+  <body>
+    <div id="left">
+      {{ content }}
+    </div>
 
-  <div id="right">  
-    <header>
-      <hgroup>
-        <h1>
-          <a href="/">{{ site.title }}</a>
-        </h1>
-      </hgroup>
-    </header>
-    {% if page.sidebar != false %}
-      {% include sidebar.html %}
-    {% endif %}
+    <div id="right">  
+      <header>
+        <hgroup>
+          <h1>
+            <a href="/">{{ site.title }}</a>
+          </h1>
+          <h2>{{ site.description }}</h2>
+        </hgroup>
+      </header>
+      {% if page.sidebar != false %}
+        {% include sidebar.html %}
+      {% endif %}
+    </div>
+
     <footer>
-        <p>{{ site.footer.copyright }}</p>
+      <p>{{ site.footer.copyright }}</p>
     </footer>
-   
-  </div>
-
-   
   </body>
 </html>
