--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
   <meta name="generator" content="Jekyll" />
   <meta name="author" content="{{ site.author.name }}" />
   <meta name="description" content="{{ site.description }}" />
+  <meta name="keywords" content="{{ site.topics }}" />
   <link rel="shortcut icon" href="/favicon.ico">
 
   <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
@@ -27,7 +28,7 @@
           <h1>
             <a href="/">{{ site.title }}</a>
           </h1>
-          <h2>{{ site.description }}</h2>
+          <h2>by {{ site.author.name }}</h2>
         </hgroup>
       </header>
     </div>
